# flow2

./: README.md  index.html  package.json  tailwind.config.js
src/: constants.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/server/: root.rs
src-tauri/src/settings/: root.rs
src-tauri/src/tor/: root.rs
src-tauri/src/wallet/: root.rs
src/components/: Root.tsx
src/components/pages/: AppOpen.tsx  CoreConfig.tsx  NewWallet.tsx  NewWalletPrompt.tsx  ServerConfig.tsx  Settings.tsx  TorServerConfig.tsx  WalletHome.tsx  Welcome.tsx
src/components/pages/bitcoinwallet/: AddressItem.tsx  Export.tsx  ListAddresses.tsx  ListUtxos.tsx  Receive.tsx  RenderBalance.tsx  RenderTransactions.tsx  TransactionDetails.tsx  TransactionItem.tsx  UpdatingQR.tsx  UtxoItem.tsx  WalletHome.tsx  WalletInfo.tsx  WalletView.tsx
src/components/pages/imports/: ImportSingle.tsx  ImportSingleFile.tsx  ImportSingleUsb.tsx  MakeSingle.tsx  NewWallet.tsx  NewWalletPrompt.tsx  SingleSigConfig.tsx
src/components/pages/setup/: AppOpen.tsx  CoreConfig.tsx  ServerConfig.tsx  TorServerConfig.tsx  Welcome.tsx
src/components/util/: AppSkeleton.tsx  ConfigurationRouter.tsx  Fades.tsx  PolicyIcon.tsx  WalletView.tsx
src/hooks/: fetchAddresses.tsx  fetchUtxos.tsx  fetchWalletMetadata.tsx  fetchWalletViewAndSync.tsx  resync.tsx
src/interfaces/: AddressMessage.ts  BalanceMessage.ts  BitcoinWalletMetadata.ts  Settings.ts  SyncingMessage.ts  TauriMessage.ts  TransactionMessage.ts  TransactionObject.ts  UtxoMessage.ts  WalletExport.ts
