[package]
name = "flow"
version = "0.0.1"
description = "A Tauri App"
authors = ["you"]
license = "MIT"
repository = "https://github.com/rustaceanrob/tauritemplate"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "dialog-open", "dialog-message", "clipboard-read-text", "clipboard-write-text", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bdk = { version = "^0.29", default-features = false, features = ["std", "all-keys", "key-value-db", "electrum", "hardware-signer"] }
libtor = "47.8.0+0.4.7.x"
dirs-next = "2.0"
confy = "0.5.1"
keyring = "2"
xyzpub = "0.3.0"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
